--- a/Projeto-Sing-In/index.html
+++ b/Projeto-Sing-In/index.html
@@ -12,6 +12,28 @@
     <title>PNFT | Market</title>
 </head>
 <body>
-    
+     <header class="logo">
+        <img src="img/Frame.svg" alt="Logo PNFT Market" class="logo__img">
+        <h1 class="logo__titulo">PNFT Market</h1>
+     </header>
+     <main class="principal">
+        <h2 class="principal__titulo">NFT Access</h2>
+        <p class="principal__descricao">Please fill your detail to access your account.</p>
+        <label for="e-mail" class="lable__email">Email</label>
+        <input type="email" id="e-mail" class="principal__email">
+        <label for="password" class="lable__password">Password</label>
+        <input type="password" id="password" class="principal__password">
+        <div class="principal__past">
+            <div class="principal__remember-me">
+                <input type="checkbox" id="chekbox" class="past__remember">
+                <label for="chekbox" class="remember-me">Remember me</label>    
+            </div>
+            <a href="#" class="past__forgot">Forgot Password?</a>
+        </div>
+        <button class="principal__sing-button">Sing in</button>
+        <button class="principal__google-button"><p class="google-sing">sing with Google</p></button>
+        <p class="proncipal__sub">Don't have an account?</p>
+        <a href="#" class="principal__sing-up">Sing up</a>
+     </main>
 </body>
 </html>
