--- a/Projeto-Sing-In/index.html
+++ b/Projeto-Sing-In/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="imagem/png" href="img/Frame.png"/>
     <title>PNFT | Market</title>
 </head>
 <body>
@@ -31,9 +32,11 @@
             <a href="#" class="past__forgot">Forgot Password?</a>
         </div>
         <button class="principal__sing-button">Sing in</button>
-        <button class="principal__google-button"><p class="google-sing">sing with Google</p></button>
-        <p class="proncipal__sub">Don't have an account?</p>
-        <a href="#" class="principal__sing-up">Sing up</a>
+        <a href="#" class="principal__google-button"><img src="img/Google.svg" alt="Google">Sing with Google</a>
+        <div class="sing-up__container">
+            <p class="principal__sub">Don't have an account?</p>
+            <a href="#" class="principal__sing-up">Sing up</a>
+        </div>
      </main>
 </body>
 </html>
