--- a/Projeto-Sing-In/index.html
+++ b/Projeto-Sing-In/index.html
@@ -21,9 +21,10 @@
         <h2 class="principal__titulo">NFT Access</h2>
         <p class="principal__descricao">Please fill your detail to access your account.</p>
         <label for="e-mail" class="lable__email">Email</label>
-        <input type="email" id="e-mail" class="principal__email">
+        <input type="email" id="e-mail" placeholder="debra.holt@example.com" class="principal__email">
         <label for="password" class="lable__password">Password</label>
-        <input type="password" id="password" class="principal__password">
+        <img src="img/Hide Icon.png" alt="Esconder Senha" class="password__eye">
+        <input type="password" id="password" placeholder="••••••••" class="principal__password">
         <div class="principal__past">
             <div class="principal__remember-me">
                 <input type="checkbox" id="chekbox" class="past__remember">
