--- a/Projeto-Sing-In/index.html
+++ b/Projeto-Sing-In/index.html
@@ -13,31 +13,38 @@
     <title>PNFT | Market</title>
 </head>
 <body>
-     <header class="logo">
-        <img src="img/Frame.svg" alt="Logo PNFT Market" class="logo__img">
-        <h1 class="logo__titulo">PNFT Market</h1>
-     </header>
-     <main class="principal">
-        <h2 class="principal__titulo">NFT Access</h2>
-        <p class="principal__descricao">Please fill your detail to access your account.</p>
-        <label for="e-mail" class="lable__email">Email</label>
-        <input type="email" id="e-mail" placeholder="debra.holt@example.com" class="principal__email">
-        <label for="password" class="lable__password">Password</label>
-        <img src="img/Hide Icon.png" alt="Esconder Senha" class="password__eye">
-        <input type="password" id="password" placeholder="••••••••" class="principal__password">
-        <div class="principal__past">
-            <div class="principal__remember-me">
-                <input type="checkbox" id="chekbox" class="past__remember">
-                <label for="chekbox" class="remember-me">Remember me</label>    
+     <main>
+        <section class="principal">
+            <div class="logo">
+                <img src="img/Frame.svg" alt="Logo PNFT Market" class="logo__img">
+                <h1 class="logo__titulo">PNFT Market</h1>
             </div>
-            <a href="#" class="past__forgot">Forgot Password?</a>
-        </div>
-        <button class="principal__sing-button">Sing in</button>
-        <a href="#" class="principal__google-button"><img src="img/Google.svg" alt="Google">Sing with Google</a>
-        <div class="sing-up__container">
-            <p class="principal__sub">Don't have an account?</p>
-            <a href="#" class="principal__sing-up">Sing up</a>
-        </div>
+            <div class="logo__desktop"><img src="img/Logo (1).png" alt="" class="logo__desktop--img"></div>
+            <h2 class="principal__titulo">NFT Access</h2>
+            <p class="principal__descricao">Please fill your detail to access your account.</p>
+            <label for="e-mail" class="lable__email">Email</label>
+            <input type="email" id="e-mail" placeholder="debra.holt@example.com" class="principal__email">
+            <label for="password" class="lable__password">Password</label>
+            <img src="img/Hide Icon.png" alt="Esconder Senha" class="password__eye">
+            <input type="password" id="password" placeholder="••••••••" class="principal__password">
+            <div class="principal__past">
+                <div class="principal__remember-me">
+                    <input type="checkbox" id="chekbox" class="past__remember">
+                    <label for="chekbox" class="remember-me">Remember me</label>    
+                </div>
+                <a href="#" class="past__forgot">Forgot Password?</a>
+            </div>
+            <button class="principal__sing-button">Sing in</button>
+            <a href="#" class="principal__google-button"><img src="img/Google.svg" alt="Google">Sing with Google</a>
+            <div class="sing-up__container">
+                <p class="principal__sub">Don't have an account?</p>
+                <a href="#" class="principal__sing-up">Sing up</a>
+            </div>
+        </section>
+        <section class="banner">
+            <img src="img/DRIP_20.png" alt="" class="banner__banner">
+        </section>
+        
      </main>
 </body>
 </html>
