--- a/Projeto-Sing-In/index.html
+++ b/Projeto-Sing-In/index.html
@@ -25,7 +25,6 @@
             <label for="e-mail" class="lable__email">Email</label>
             <input type="email" id="e-mail" placeholder="debra.holt@example.com" class="principal__email">
             <label for="password" class="lable__password">Password</label>
-            <img src="img/Hide Icon.png" alt="Esconder Senha" class="password__eye">
             <input type="password" id="password" placeholder="••••••••" class="principal__password">
             <div class="principal__past">
                 <div class="principal__remember-me">
@@ -34,8 +33,10 @@
                 </div>
                 <a href="#" class="past__forgot">Forgot Password?</a>
             </div>
-            <button class="principal__sing-button">Sing in</button>
-            <a href="#" class="principal__google-button"><img src="img/Google.svg" alt="Google">Sing with Google</a>
+            <div class="principal__button">
+                <a href="#" class="principal__sing-button">Sing in</a>
+                <a href="#" class="principal__google-button"><img src="img/Google.svg" alt="Google">Sing with Google</a>
+            </div>
             <div class="sing-up__container">
                 <p class="principal__sub">Don't have an account?</p>
                 <a href="#" class="principal__sing-up">Sing up</a>
